Changed API a bit, updated API docs, fixed 'JwtMiddleware', added API method for getting all organization names, removed nginx server for UI
